remove css 3d experiment

--- a/web/index.html
+++ b/web/index.html
@@ -11,8 +11,7 @@
   </head>
 
   <body>
-    <!-- <canvas id="canvas" width="1200" height="624"></canvas> -->
-    <!-- <script src="tiles.js" type="text/javascript"></script> -->
-    <script src="tiles-css.js" type="text/javascript"></script>
+    <canvas id="canvas" width="1200" height="624"></canvas>
+    <script src="tiles.js" type="text/javascript"></script>
   </body>
 </html>
