--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,8 @@
 
   <body>
     <canvas id="canvas" width="1200" height="624"></canvas>
+    <input type="range" id="setSpeed" min="0" max="2" step=".1" onchange="setSpeed(event)" />
+
     <script src="tiles.js" type="text/javascript"></script>
   </body>
 </html>
