--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,9 @@
 
   <body>
     <canvas id="canvas" width="1200" height="624"></canvas>
-    <input type="range" id="setSpeed" min="0" max="2" step=".1" onchange="setSpeed(event)" />
+    <div class="controls">
+      <input type="range" id="setSpeed" min="0" max="2" step=".1" oninput="setSpeed(event)" onchange="setSpeed(event)" />
+    </div>
 
     <script src="tiles.js" type="text/javascript"></script>
   </body>
