--- a/web/index.html
+++ b/web/index.html
@@ -11,11 +11,15 @@
   </head>
 
   <body>
-    <canvas id="canvas" width="1200" height="624"></canvas>
     <div class="controls">
-      <input type="range" id="setSpeed" min="0" max="2" step=".1" oninput="setSpeed(event)" onchange="setSpeed(event)" />
+      tile size <input type="range" id="tileSize" min="10" max="80" step="1" oninput="changeSetting(this.id, event.target.value)" />
+      tile padding <input type="range" id="tilePadding" min="0" max="10" step="1" oninput="changeSetting(this.id, event.target.value)" />
+      grid x <input type="range" id="gridX" min="2" max="30" step="1" oninput="changeSetting(this.id, event.target.value)" />
+      grid y <input type="range" id="gridY" min="2" max="30" step="1" oninput="changeSetting(this.id, event.target.value)" />
     </div>
 
-    <script src="tiles.js" type="text/javascript"></script>
+    <script src="lib/p5.min.js" type="text/javascript"></script>
+    <script src="tiles-p5.js" type="text/javascript"></script>
+    <script src="input.js" type="text/javascript"></script>
   </body>
 </html>
