--- a/web/index.html
+++ b/web/index.html
@@ -12,10 +12,11 @@
 
   <body>
     <div class="controls">
-      tile size <input type="range" id="tileSize" min="10" max="80" step="1" oninput="changeSetting(this.id, event.target.value)" />
-      tile padding <input type="range" id="tilePadding" min="0" max="10" step="1" oninput="changeSetting(this.id, event.target.value)" />
+      tile size <input type="range" id="tileSize" min="10" max="100" step="1" oninput="changeSetting(this.id, event.target.value)" />
+      tile padding <input type="range" id="tilePadding" min="0" max="5" step="1" oninput="changeSetting(this.id, event.target.value)" />
       grid x <input type="range" id="gridX" min="2" max="30" step="1" oninput="changeSetting(this.id, event.target.value)" />
       grid y <input type="range" id="gridY" min="2" max="30" step="1" oninput="changeSetting(this.id, event.target.value)" />
+      curve iterations <input type="range" id="curveIterations" min="2" max="11" step="1" oninput="changeSetting(this.id, event.target.value)" />
     </div>
 
     <script src="lib/p5.min.js" type="text/javascript"></script>
