add styling and animation of control panel, esc to toggle

--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <div class="controls">
+    <div id="controls">
       tile size <input type="range" id="tileSize" min="10" max="100" step="1" oninput="changeSetting(this.id, event.target.value)" />
       tile padding <input type="range" id="tilePadding" min="0" max="5" step="1" oninput="changeSetting(this.id, event.target.value)" />
       grid x <input type="range" id="gridX" min="2" max="30" step="1" oninput="changeSetting(this.id, event.target.value)" />
