--- a/web/index.html
+++ b/web/index.html
@@ -12,11 +12,15 @@
 
   <body>
     <div id="controls">
-      tile size <input type="range" id="tileSize" min="10" max="100" step="1" oninput="changeSetting(this.id, event.target.value)" />
+      tile size <input type="range" id="tileSize" min="10" max="100" step="1" value="10" oninput="changeSetting(this.id, event.target.value)" />
       tile padding <input type="range" id="tilePadding" min="0" max="5" step="1" oninput="changeSetting(this.id, event.target.value)" />
-      grid x <input type="range" id="gridX" min="2" max="30" step="1" oninput="changeSetting(this.id, event.target.value)" />
-      grid y <input type="range" id="gridY" min="2" max="30" step="1" oninput="changeSetting(this.id, event.target.value)" />
-      curve iterations <input type="range" id="curveIterations" min="2" max="11" step="1" oninput="changeSetting(this.id, event.target.value)" />
+      grid x <input type="range" id="gridX" min="2" max="30" step=".1" value="30" oninput="changeSetting(this.id, event.target.value)" />
+      grid y <input type="range" id="gridY" min="2" max="30" step="1" value="30" oninput="changeSetting(this.id, event.target.value)" />
+      speed <input type="range" id="speed" min="1" max="80" step="1" value="40" oninput="changeSetting(this.id, event.target.value)" />
+      rewind <input type="checkbox" id="rewind" onchange="changeSetting(this.id, event.target.checked)" />
+      cam x <input type="range" id="camX" min="0" max="800" step="1" value="0" oninput="changeSetting(this.id, event.target.value)" />
+      cam y <input type="range" id="camY" min="0" max="500" step="1" value="0" oninput="changeSetting(this.id, event.target.value)" />
+      <span id="message"></span>
     </div>
 
     <script src="lib/p5.min.js" type="text/javascript"></script>
