--- a/web/index.html
+++ b/web/index.html
@@ -40,7 +40,7 @@
 
     <script src="lib/p5.min.js" type="text/javascript"></script>
     <script src="settings.js" type="text/javascript"></script>
-    <script src="tiles-p5.js" type="text/javascript"></script>
+    <script src="main.js" type="text/javascript"></script>
     <script src="input.js" type="text/javascript"></script>
   </body>
 </html>
