add color controls

--- a/web/index.html
+++ b/web/index.html
@@ -36,7 +36,7 @@
           <div>
             zoom <input type="range" id="zoom" min="5" max="100" step="1" oninput="updateSetting(this.id, this.value)" />
             radius <input type="range" id="radius" min="3" max="25" step="1" oninput="updateSetting(this.id, this.value)" />
-            bodies <input type="range" id="bodies" min="10" max="60" step="1"oninput="updateSetting(this.id, this.value)" />
+            bodies <input type="range" id="bodies" min="10" max="60" step="1" oninput="updateSetting(this.id, this.value)" />
             speed <input type="range" id="speed" min="1" max="80" step="1" oninput="updateSetting(this.id, this.value)" />
             rewind <input type="checkbox" id="rewind" onchange="updateSetting(this.id, this.checked)" />
             <button type="button" id="defaults" onclick="loadDefaults(event.target)">defaults</button>
@@ -44,14 +44,24 @@
         </div>
       </div>
       <div id="color">
-        <div class="controlHeader">color</div>
+        <div class="controlHeader">colors</div>
         <div class="controlPanel">
-          <div>base 1<input type="color" id="color1a" /></div>
-          <div>base 2<input type="color" id="color2a" /></div>
+          <input type="color" id="color1a" onchange="updateSetting(this.id, this.value)" />
+          <input type="color" id="color1b" onchange="updateSetting(this.id, this.value)" />
+          <input type="color" id="color2a" onchange="updateSetting(this.id, this.value)" />
+          <input type="color" id="color2b" onchange="updateSetting(this.id, this.value)" />
+          <input type="color" id="bgColor" onchange="updateSetting(this.id, this.value)" />
+          <br>
+          x1 <input type="checkbox" id="g1x" onchange="updateSetting(this.id, this.checked)" />
+          y1 <input type="checkbox" id="g1y" onchange="updateSetting(this.id, this.checked)" />
+          x2 <input type="checkbox" id="g2x" onchange="updateSetting(this.id, this.checked)" />
+          y2 <input type="checkbox" id="g2y" onchange="updateSetting(this.id, this.checked)" />
+          alpha1 <input type="range" id="c1alpha" min="0" max="255" step="1" oninput="updateSetting(this.id, this.value)" />
+          alpha2 <input type="range" id="c2alpha" min="0" max="255" step="1" oninput="updateSetting(this.id, this.value)" />
         </div>
       </div>
       <div id="msg">
-        <div id="msgHeader" class="controlHeader">help text</div>
+        <div id="msgHeader" class="controlHeader">message</div>
         <div id="message" class="controlPanel">
         </div>
       </div>
