improve zoom in orbit mode (what a trial to get such a simple formula!)

--- a/web/index.html
+++ b/web/index.html
@@ -80,7 +80,7 @@
           <div class="patternMode"> not implemented yet</div>
           <div class="slider left orbitMode">
             <label for="zoom"><div>zoom</div><span></span></label>
-            <input type="range" id="zoom" min="5" max="80" step="1" oninput="updateSetting(this.id, this.value)" />
+            <input type="range" id="zoom" min="5" max="80" step="1" oninput="updateZoom(this.value)" />
           </div>
           <div class="slider right orbitMode">
             <label for="curl"><div>curl</div><span></span></label>
