--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="James Rowen">
     <meta name="description" content="Tile spinner">
     <meta name="keywords" content="tiles, math, canvas, patterns">
-    <link rel="stylesheet" href="styles-input.css" type="text/css">
-    <link rel="stylesheet" href="styles.css" type="text/css">
+    <link rel="stylesheet" href="css/styles-input.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
 
   <body>
